# ShamirsSecretSharingScheme

./: .gitignore  CMakeLists.txt  Makefile  README.md  get_insecure_randomness.cpp  getwords.sh  input_d2_test.sh  input_d_test.sh  input_m2_test.sh  input_m_test.sh  main.cpp  multiblock.cpp  multiblock.h  multiblock_test.cpp  oneblockshamir.cpp  oneblockshamir.h  oneblockshamir_test.cpp  onetimeshamir.cpp  onetimeshamir.h  onetimeshamir_test.cpp  rijndael.cpp  rijndael.h  rijndael_test.cpp  shamirmulti.cpp  shamirmulti.h  shamirmulti_test.cpp  wordlist.cpp  wordlist.h  wordlist_test.cpp
src/: .gitignore  CMakeLists.txt  Makefile  bit_container.cpp  bit_container.h  get_insecure_randomness.cpp  get_insecure_randomness.h  hmac_sha256.cpp  hmac_sha512.cpp  hmac_sha512.h  main.cpp  multiblock.h  multiblockshamir.cpp  multiblockshamir.h  oneblockshamir.cpp  oneblockshamir.h  orig.pbkdf2.cpp  pbkdf2.cpp  rijndael.cpp  rijndael.h  sha256.cpp  sha256.h  sha512.cpp  share.cpp  share.h  slip39_wrapper.cpp  slip39_wrapper.h  wordlist.cpp  wordlist.h
src/qt/: CMakeLists.txt  ShamirQT.pro  imgs.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/test/: .gitignore  bit_container.cpp  bit_container.h  custom_pbkdf_key_1024B.hex.txt  get_insecure_randomness.cpp  hmac_sha256.h  hmac_sha512.cpp  oldmain.cpp  pbkdf2.h  pbkdf2_test.cpp  sha512.cpp  slip39_wrapper.cpp  wordlist.cpp  wordlist.h
src/test/test_raw_multiblock/: test_3-out-of-5.sh
src/test/test_slip_multiblock/: .gitignore  rijndael.h  sha256.cpp
src/test_raw_multiblock/: bit_container.cpp  bit_container.h  get_insecure_randomness.cpp  multiblockshamir.cpp  multiblockshamir_test.cpp
src/test_slip_multiblock/: get_insecure_randomness.h  multiblockshamir.h  oneblockshamir.cpp  oneblockshamir.h  rijndael.cpp  share.cpp  share.h  slip_multiblock.cpp
